# devsm

./: Cargo.toml  README.md  devsm-schema.json  devsm.js  devsm.toml  dfj.js
.github/workflows/: ci.yml
completions/: devsm.bash  devsm.fish  devsm.zsh
devsm/: CLAUDE.md  Cargo.toml
devsm-rpc/: Cargo.toml
devsm-rpc/examples/: subscribe.rs
devsm-rpc/src/: lib.rs
devsm/src/: cli.rs  config.rs  daemon.rs  keybinds.rs  lib.rs  line_width.rs  log_fowarder_ui.rs  log_storage.rs  main.rs  process_manager.rs  rpc.rs  scroll_view.rs  searcher.rs  test_summary_ui.rs  tui.rs  user_config.rs  workspace.rs
devsm/src/config/: toml_handler.rs
devsm/src/tui/: log_search.rs  log_stack.rs  select_search.rs  task_launcher.rs  task_tree.rs
devsm/src/workspace/: job_index_list.rs
devsm/tests/: e2e.rs
devsm/tests/e2e/: e2e_bench.rs  e2e_cli.rs  e2e_tui.rs  harness.rs
examples/: auto_dep_record.rs  auto_dep_replay.rs  trace_bench.rs
schema/: devsm.example-big.toml  devsm.json
src/: alloc_report.rs  auto_deps.rs  cache_key.rs  cli.rs  clipboard.rs  clock.rs  completion.rs  config.rs  daemon.rs  db.rs  diagnostic.rs  event_loop.rs  forwarder.rs  function.rs  fuzz_server.rs  global_tui.rs  keybinds.rs  line_buffer.rs  line_width.rs  log_fowarder_ui.rs  log_storage.rs  main.rs  process_manager.rs  rpc.rs  scroll_view.rs  searcher.rs  self_log.rs  terminal_harness.rs  test.rs  test_forwarder.rs  test_summary_ui.rs  tui.rs  user_config.rs  validate.rs  welcome_message.rs  workspace.rs
src/auto_deps/: event.rs  inference.rs  recording.rs  toml_writer.rs  tracer.rs
src/auto_deps/inference/: rules.rs
src/auto_deps/tracer/: linux.rs  mem_read.rs  seccomp.rs  state.rs  syscalls.rs
src/cache_key/: linux.rs  posix.rs  standard.rs  tests.rs
src/config/: template_string.rs  toml_handler.rs
src/event_loop/: rpc_handlers.rs
src/process_manager/: rpc_handlers.rs
src/scroll_view/: scroll_widget.rs  tail_widget.rs  test.rs
src/tui/: command_palette.rs  config_error.rs  log_search.rs  log_stack.rs  select_search.rs  shortcut_bar.rs  task_launcher.rs  task_tree.rs  test_filter_launcher.rs
src/workspace/: job_index_list.rs  job_store.rs  persistent_cache.rs  require_graph.rs  resource.rs  scheduler_backend.rs
test-app/src/: main.rs
tests/: auto_deps.rs  e2e.rs
tests/completions/: bash.test.sh  fish.test.fish  harness.sh  zsh.test.zsh
tests/completions/workspace/: devsm.toml
tests/e2e/: e2e_bench.rs  e2e_cli.rs  e2e_crash.rs  e2e_fuzz_time.rs  e2e_terminal.rs  e2e_test_app.rs  e2e_tui.rs  harness.rs
tests/workspace/: devsm.toml
