[package]
name = "devsm"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["test-app"]

[dependencies]
anyhow = "1.0.100"
kvlog = { git = "https://github.com/exrok/kvlog", rev = "e3e0e9b4b966c9d47bc6019259f4b2036b06c8a3", default-features = false }
libc = "0.2.177"
mio = { version = "1.0.4", features = [
    "os-poll",
    "os-ext",
], default-features = false }
slab = "0.4.11"
unicode-segmentation = "1.12.0"
unicode-width = { version = "0.2.2", default-features = false }
jsony = "0.1.8"
bumpalo = { version = "3.19.0", features = ["collections"] }
memchr = "2.7.6"
sendfd = "0.4.4"
jsony_value = "0.0.1"
toml-spanner.rev = "95f04e879babef0b66fc445a45f215a46d69565a"
toml-spanner.git = "https://github.com/exrok/toml-spanner"
toml-spanner.default-features = false
toml-spanner.features = ["from-toml"]
hashbrown = { version = "0.16.1", default-features = false, features = [
    "default-hasher",
] }
foldhash = "0.2.0"
annotate-snippets = "0.12.10"
blake3 = { version = "1.8.3" }
fast-glob = "1.0.0"
# Use git dependency until version 0.2 is released.
extui = { git = "https://github.com/exrok/extui", rev = "b3aa3cba62c0287254a247e2072d2a8df1cd7dd2" }
mimalloc = { version = "0.1.48", optional = true }
smallvec = "1.15.1"

# [patch."https://github.com/exrok/extui"]
# extui = { path = "/home/user/Projects/git/extui" }

[dev-dependencies]
vt100 = "*"


[features]
fuzz = []
mimalloc = ["dep:mimalloc"]
